@startuml

title __MESSAGE's Class Diagram__\n

  namespace de.gematik.ti.openhealthcard.events.message {
    abstract class de.gematik.ti.openhealthcard.events.message.AbstractOpenHealthCardEvent {
        - message : String
        - sourceClass : String
        + AbstractOpenHealthCardEvent()
        + AbstractOpenHealthCardEvent()
        + getMessage()
        + getSourceClass()
        + toString()
    }
  }
  

  namespace de.gematik.ti.openhealthcard.events.message {
    class de.gematik.ti.openhealthcard.events.message.ErrorEvent {
        - throwable : Throwable
        + ErrorEvent()
        + ErrorEvent()
        + ErrorEvent()
        + ErrorEvent()
        + ErrorEvent()
        + ErrorEvent()
        + getThrowable()
        + toString()
    }
  }
  

  namespace de.gematik.ti.openhealthcard.events.message {
    class de.gematik.ti.openhealthcard.events.message.InfoEvent {
        + InfoEvent()
        + InfoEvent()
        + toString()
    }
  }
  

  namespace de.gematik.ti.openhealthcard.events.message {
    class de.gematik.ti.openhealthcard.events.message.WarnEvent {
        + WarnEvent()
        + WarnEvent()
        + toString()
    }
  }
  

  de.gematik.ti.openhealthcard.events.message.ErrorEvent -up-|> de.gematik.ti.openhealthcard.events.message.AbstractOpenHealthCardEvent
  de.gematik.ti.openhealthcard.events.message.InfoEvent -up-|> de.gematik.ti.openhealthcard.events.message.AbstractOpenHealthCardEvent
  de.gematik.ti.openhealthcard.events.message.WarnEvent -up-|> de.gematik.ti.openhealthcard.events.message.AbstractOpenHealthCardEvent


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
